plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.stoliar'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

project(':user-service') {
    apply plugin: 'org.springframework.boot'

    bootJar {
        archiveFileName = 'user-service.jar'
    }
}

project(':auth-service') {
    apply plugin: 'org.springframework.boot'

    bootJar {
        archiveFileName = 'auth-service.jar'
    }
}

project(':order-service') {
    apply plugin: 'org.springframework.boot'

    bootJar {
        archiveFileName = 'order-service.jar'
    }
}

project(':api-gateway') {
    apply plugin: 'org.springframework.boot'

    bootJar {
        archiveFileName = 'api-gateway.jar'
    }
}